# baxterjo.github.io

./: Cargo.toml  Dioxus.toml  Makefile  README.md  README.txt  about.html  contact.html  educationandexperience.html  experience.html  index.html  input.css  navbar.html  package-lock.json  package.json  projects.html  screen.css  tailwind.config.js
css/: style.css
docs/: 404.html  index.html
docs/assets/: baxterjo_webapp-46b786d4b2c85733.js  baxterjo_webapp-46b786d4b2c85733.js.br  baxterjo_webapp_bg-1d612ed9db09337c.wasm  baxterjo_webapp_bg-1d612ed9db09337c.wasm.br  baxterjo_webapp_bg-f48b49830618e332.wasm  baxterjo_webapp_bg-f48b49830618e332.wasm.br
docs/css/: style.css
docs/public/: index.html
hobbies/: climbing.html
hooks/: pre-commit
js/: main.js
old_site/: contact.html  index.html
old_site/contactform/: contactform.php
old_site/css/: style.css
old_site/projects/: 3bandequalizer.html  povwand.html  underconstruction.html
projects/: 3bandequalizer.html  8bitclock.html  antsim.html  btswitch.html  bustout.html  eba.html  index.html  pongsrevenge.html  povwand.html  underconstruction.html
pub_2/: about.html  navbar.html
pub_2/hobbies/: climbing.html
pub_2/projects/: btswitch.html  index.html
public/: tailwind.css
public/css/: style.css
site_content/: about.md
site_content/content_template/: config.toml
src/: app.rs  components.rs  content.rs  errors.rs  home.rs  lib.rs  main.rs  markdown.rs  pages.rs  router.rs  utils.rs
src/components/: gallery.rs  layout.rs  nav_bar.rs  page_not_found.rs
src/pages/: about.rs  contact.rs  (+4 more)
(+125 files in other folders)
