[package]
name = "baxterjo_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-html-macro = "0.3.0"
dioxus-router = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.20"
# markdown = "1.0.0-alpha.16"
wasm-logger = "0.2.0"
dioxus_markdown = { version = "0.2.0", git = "https://github.com/DioxusLabs/markdown.git" }

[dev-dependencies]
env_logger = "0.10.1"
