[package]
name = "baxterjo_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version = "=0.6.3", features = ["router"]}
log = "0.4.20"
wasm-logger = "0.2.0"
toml = "0.8.8"
serde = { version = "1.0.194", features = ["derive"] }
walkdir = "2.4.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
urlencoding = "2.1.3"
include_dir = "0.7.3"
pulldown-cmark = "0.9.3"
web-sys = { version = "0.3.66", features = ["Window", "Document"] }

[dev-dependencies]
env_logger = "0.10.1"
